# bob

./: .gitignore  .rustfmt.toml  CHANGES.md  Cargo.toml  README.md  build.rs  plan.md
.claude/: CLAUDE.md  settings.json
.claude/rules/: agents.md  architecture.md  rust-style.md
config/: generic.lua  generic.toml  illumos.lua  illumos.toml  linux.lua  macos.lua  macos.toml  netbsd.lua  netbsd.toml
docs/: db-optimization-plan.md
examples/: illumos.toml  macos.toml  netbsd.toml  scan.lua  smartos-trunk.lua
scripts/: pkg-build  pkg-scan  pkg-up-to-date  post-build  pre-build
scripts/macos/: mdns-listener
src/: action.rs  build.rs  config.rs  cpu.rs  db.rs  fmt.rs  funcs.lua  history.rs  init.rs  jobs.rs  lib.rs  logging.rs  main.rs  makejobs.rs  mount.rs  pbulk_report.rs  pkgstate.rs  report.rs  sandbox.rs  scan.rs  scheduler.rs  state.rs  stats.rs  status.rs  summary.rs  tui.rs  vcs.rs
src/cmd/: build.rs  db.rs  diff.rs  history.rs  list.rs  log.rs  mod.rs  prune.rs  publish.rs  rebuild.rs  sandbox.rs  simulate.rs  status.rs  util.rs
src/sandbox/: sandbox_generic.rs  sandbox_linux.rs  sandbox_macos.rs  sandbox_netbsd.rs  sandbox_sunos.rs
tests/: resolve.rs  scan_build.rs  scheduler.rs
tests/data/: depgraph-bulk-large.zst  depgraph-mutt.zst  depgraph.zst  history-bulk-large.zst  history-mutt.zst  presolve.zst  presolve.zstd
