[package]
name = "bob"
description = "Fast, robust, powerful, user-friendly pkgsrc package builder"
version = "0.99.2"
authors = ["Jonathan Perkin <jonathan@perkin.org.uk>"]
keywords = ["cli", "pkgsrc"]
license = "ISC"
repository = "https://github.com/jperkin/bob"
homepage = "https://github.com/jperkin/bob"
documentation = "https://docs.rs/bob"
rust-version = "1.86.0"
edition = "2024"

[dependencies]
anyhow = "1.0.89"
chrono = { version = "0.4", default-features = false, features = ["now"] }
clap = { version = "4.5", features = ["derive"] }
copy_dir = "0.1"
crossterm = { version = "0.28", features = ["use-dev-tty"] }
flate2 = "1.1"
gix = { version = "0.68", default-features = false, features = ["blob-diff", "revision"] }
glob = "0.3"
indexmap = "2.12.1"
lettre = { version = "0.11", default-features = false, features = ["sendmail-transport", "builder"] }
libc = "0.2"
petgraph = "0.6.5"
pkgsrc = { version = "0.9.0", features = ["serde"] }
ratatui = { version = "0.30", features = ["scrolling-regions"] }
rayon = "1.10.0"
regex = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shlex = "1"
signal-hook = "0.3"
strip-ansi-escapes = "0.2"
strum = { version = "0.28", features = ["derive"] }
systemstat = "0.2"
tar = "0.4"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
unicode-width = "0.2"
xdg = "3.0"
zstd = "0.13"

# Use vendored Lua on platforms where lua-src supports building
[target.'cfg(not(target_os = "illumos"))'.dependencies]
mlua = { version = "0.10", features = ["lua54", "vendored", "send"] }

# Use system Lua on illumos (lua-src doesn't support it)
[target.'cfg(target_os = "illumos")'.dependencies]
kstat-rs = "0.2"
mlua = { version = "0.10", features = ["lua54", "send"] }

[dev-dependencies]
tempfile = "3.24.0"

[patch.crates-io]
systemstat = { git = "https://github.com/jperkin/systemstat", branch = "platform-support" }
