[package]
name = "bob"
description = "Fast, robust, powerful, user-friendly pkgsrc package builder"
version = "0.99.7"
authors = ["Jonathan Perkin <jonathan@perkin.org.uk>"]
keywords = ["cli", "pkgsrc"]
license = "ISC"
repository = "https://github.com/jperkin/bob"
homepage = "https://github.com/jperkin/bob"
documentation = "https://docs.rs/bob"
rust-version = "1.88.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
clap = { version = "4.6", features = ["derive"] }
copy_dir = "0.1"
crossterm = { version = "0.29", features = ["use-dev-tty"] }
csv = "1.4"
flate2 = "1.1"
gix = { version = "0.84", default-features = false, features = ["blob-diff", "revision", "sha1"] }
glob = "0.3"
indexmap = "2.14.0"
lettre = { version = "0.11", default-features = false, features = ["sendmail-transport", "builder"] }
libc = "0.2"
mlua = { version = "0.12.0-rc.2", features = ["lua54", "vendored", "send"] }
petgraph = "0.8"
pkgsrc = { version = "0.13.0", features = ["serde"] }
ratatui = { version = "0.30", features = ["scrolling-regions"] }
rayon = "1.12.0"
regex = "1"
rusqlite = { version = "0.39", features = ["bundled", "functions"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_rusqlite = "0.42"
shlex = "2"
signal-hook = "0.4"
strip-ansi-escapes = "0.2"
strum = { version = "0.28", features = ["derive"] }
systemstat = "0.2"
tar = "0.4"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
unicode-width = "0.2"
xdg = "3.0"
zstd = "0.13"

[target.'cfg(target_os = "illumos")'.dependencies]
kstat-rs = "0.2"

[dev-dependencies]
tempfile = "3.27.0"
